# gcc-memory

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
integrations/claude/: gcc_memory_observe.py  gcc_memory_stop.py  gcc_memory_sync.py  hook_common.py
scripts/: backfill_history.py  run_backfill.sh  setup_agent_hooks.sh  update_main.py
skills/gcc/: SKILL.md
src/gcc_memory/: __init__.py  adapters.py  agent_runtime.py  cli.py  server.py  store.py  utils.py  ws.py
tests/: test_adapters.py  test_agent_runtime.py  test_cli_exec.py  test_store.py
